Fix clipping issue with dashboard resize

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -6,6 +6,7 @@
   border-radius: 9px;
   border: solid 4px rgb(80, 12, 12);
   transition: 0.5s;
+  margin: auto;
 
   &:hover {
     transition: 0.5s;
